sort.pancake.BasicPancake.scala.code
def solve() {
  var n= getStackSize();
  while (!isSorted) {
    flip()
  }
}